--- a/myboot03/src/main/resources/templates/fragments/header.html
+++ b/myboot03/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 		  <tr>
 		     <td>
 		     	<a  th:href="@{/member/main.do}">
-					<!-- <img th:src="${/image/duke_swing.gif}"  /> -->
+					 <img th:src="@{/image/duke_swing.gif}" />
 				</a>
 		     </td>
 		     <td>
